♻️ refactor(views): Upgrade semantic html

--- a/src/shared/ui/views/page-not-found/page-not-found.component.html
+++ b/src/shared/ui/views/page-not-found/page-not-found.component.html
@@ -1,5 +1,5 @@
-<div class="grid min-h-screen place-items-center px-4 py-20">
-	<div class="max-w-[650px] text-center">
+<main class="grid min-h-screen place-items-center px-4 py-20">
+	<section class="max-w-[650px] text-center">
 		<img class="mx-auto mb-10" src="assets/images/brand/logo_smartsoftlabs.png" alt="Logo de SmartSoft Labs" width="150" />
 		<img
 			class="mx-auto mb-10 w-full max-w-[450px]"
@@ -12,5 +12,5 @@
 		</p>
 
 		<a mat-stroked-button color="primary" routerLink="..">Volver atrás</a>
-	</div>
-</div>
+	</section>
+</main>
