✨ feature(animation): Implement logo viewTransition
Implement routerLink and logo in the pages:
- layout
- login
- no found

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,9 @@
-<p>login works!</p>
+<main>
+	<section>
+		<img src="assets/images/brand/logo_smartsoftlabs.png" alt="" style="view-transition-name: smartsoftlabs" />
+		<a routerLink="/app">App</a>
+	</section>
+</main>
+
+<div
+	class="absolute inset-0 -z-10 size-full bg-white [background:radial-gradient(125%_125%_at_50%_10%,#fff_40%,#036064_100%)]"></div>
