--- a/src/app/pages/pages-layout.component.html
+++ b/src/app/pages/pages-layout.component.html
@@ -1,2 +1,5 @@
 <h1>Layout pages</h1>
+
+<img src="assets/images/brand/logo_smartsoftlabs.png" alt="" width="200" style="view-transition-name: smartsoftlabs" />
+<a routerLink="/login">closed</a>
 <router-outlet />
