--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@
 
 $smartsoft-labs-primary: mat.define-palette(mat.$cyan-palette, 400);
 $smartsoft-labs-accent: mat.define-palette(mat.$cyan-palette, 900);
-$smartsoft-labs-warn: mat.define-palette(mat.$amber-palette);
+$smartsoft-labs-warn: mat.define-palette(mat.$red-palette);
 
 $smartsoft-labs-theme: mat.define-light-theme(
 	(
