✨ feature(atoms): Create loading spin
- Change some colors

--- a/src/shared/ui/views/page-not-found/page-not-found.component.html
+++ b/src/shared/ui/views/page-not-found/page-not-found.component.html
@@ -10,12 +10,14 @@
 			class="mx-auto mb-10 w-full max-w-[450px]"
 			src="assets/images/interfaces/illustrations/not_found.svg"
 			alt="Imagen pagina no encontrada" />
-		<h1 class="mb-3 text-balance text-3xl text-primary-500">Estás intentando llegar a mundos nuevos</h1>
+		<h1 class="mb-3 text-balance text-3xl text-primary-700">Estás intentando llegar a mundos nuevos</h1>
 		<p class="mb-7 max-w-[75ch] text-pretty font-light text-gray-600">
 			La página a la que intenta acceder no existe. Por favor verifique la URL de la página o intente volver a la página
 			anterior.
 		</p>
 
 		<a mat-stroked-button color="primary" routerLink="..">Volver atrás</a>
+		<a mat-stroked-button color="accent" routerLink="..">Volver atrás</a>
+		<a mat-stroked-button color="warn" routerLink="..">Volver atrás</a>
 	</section>
 </main>
