--- a/src/app/pages/pages-layout.component.html
+++ b/src/app/pages/pages-layout.component.html
@@ -1,6 +1,6 @@
 <mat-sidenav-container class="bg-red-200">
-	<app-navbar />
-	<mat-sidenav><app-sidenav /></mat-sidenav>
+	<app-navbar (toggleSidenav)="toggleSidenav()" />
+	<mat-sidenav [opened]="showSidenav"><app-sidenav (toggleSidenav)="toggleSidenav()" /></mat-sidenav>
 
 	<main class="flex h-full min-h-screen w-full flex-col pt-20">
 		<div class="mx-auto w-full max-w-screen-xl flex-1 px-4">
