--- a/src/shared/ui/atoms/navbar/navbar.component.html
+++ b/src/shared/ui/atoms/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="fixed top-0 z-50 w-screen border-b border-solid border-gray-100 bg-white/75 py-4 shadow-sm backdrop-blur-sm">
 	<div class="mx-auto flex w-full max-w-screen-xl items-center px-4">
-		<button class="me-auto md:me-2" mat-icon-button matTooltip="Abrir menú">
+		<button class="me-auto md:me-2" mat-icon-button matTooltip="Abrir menú" (click)="toggleSidenav.emit()">
 			<mat-icon>menu</mat-icon>
 		</button>
 
