✨ feature(layout): Finish layout
Finish sidenav and minor fix to navbar and page-not-found

--- a/src/shared/ui/atoms/navbar/navbar.component.html
+++ b/src/shared/ui/atoms/navbar/navbar.component.html
@@ -4,7 +4,7 @@
 			<mat-icon>menu</mat-icon>
 		</button>
 
-		<a routerLink="/app">
+		<a class="transition-transform hover:scale-105" routerLink="/app">
 			<img
 				src="assets/images/brand/logo_smartsoftlabs.png"
 				alt="SmartSoftLabs Logo"
