--- a/src/shared/ui/views/page-not-found/page-not-found.component.html
+++ b/src/shared/ui/views/page-not-found/page-not-found.component.html
@@ -1,11 +1,6 @@
 <main class="grid min-h-screen place-items-center px-4 py-20">
 	<section class="max-w-[650px] text-center">
-		<img
-			class="mx-auto mb-10"
-			src="assets/images/brand/logo_smartsoftlabs.png"
-			alt="Logo de SmartSoft Labs"
-			width="150"
-			style="view-transition-name: smartsoftlabs" />
+		<img class="mx-auto mb-10" src="assets/images/brand/logo_smartsoftlabs.png" alt="Logo de SmartSoft Labs" width="150" />
 		<img
 			class="mx-auto mb-10 w-full max-w-[450px]"
 			src="assets/images/interfaces/illustrations/not_found.svg"
