✨ feature(component): Create card-link
- Add gap in sidenav items menu

--- a/src/shared/ui/atoms/sidenav/sidenav.component.html
+++ b/src/shared/ui/atoms/sidenav/sidenav.component.html
@@ -5,7 +5,7 @@
 			<img src="assets/images/brand/logo_smartsoftlabs.png" alt="SmartSoftLabs Logo" width="200" />
 		</a>
 	</div>
-	<div class="flex flex-col">
+	<div class="flex flex-col gap-1">
 		<a class="item-menu" routerLink="import-csv" routerLinkActive="active" (click)="onClosedMenu()"
 			><mat-icon>attach_file</mat-icon> Analizar CSV</a
 		>
